--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <!-- Product 1 -->
       <div class="product-card">
         <div class="product-card__image">
-          <img src="img/Product Image.png" alt="Velvety Chicori" />
+          <img src="img/Product Image.png" alt="Velvety Chicori"/>
         </div>
         <div class="product-card__desc">
           <div class="desc--nameprice">
@@ -397,7 +397,7 @@
           <div class="try-service__content--headline">
             <h6 class="try-service__content--pretitle">Try Our Service</h6>
             <h2 class="try-service__content--title">Your skin diagnosis in<br>3 minutes</h2>
-            <p class="try-service__content--subtitle">
+            <p class="try-service__content--subtitle hide-text">
               Say hello to a more radiant, healthier you with personalized<br>
               skincare that's as unique as you are.
             </p>
@@ -503,7 +503,7 @@
         </div>
 
         <!-- Separator -->
-        <div class="cta02__separator"></div>
+        <div class="cta02__separator hide-separator"></div>
 
         <!-- CTA02 3 -->
         <div class="cta02__item">
