New Page : About

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul class="nav__menu--1">
               <li class="menu__items hide-sm"><a href="#">Page</a></li>
               <li class="menu__items show-sm"><a href="#">Shop</a></li>
-              <li class="menu__items hide-sm"><a href="#">About</a></li>
+              <li class="menu__items hide-sm"><a href="about.html">About</a></li>
             </ul>
             <ul class="nav__menu--2">
               <li class="menu__items hide-sm"><a href="#">Login</a></li>
@@ -334,7 +334,7 @@
           <!-- Listing Categories -->
           <div class="listing-categories">
             <div class="listing-categories__row">
-              <button class="category active-btns">All Needs</button>
+              <button class="category active-btns">All needs</button>
               <button class="category btns">Protect</button>
               <button class="category btns">Regenerates</button>
             </div>
