AboutPage Mobile Rivisi

--- a/about.html
+++ b/about.html
@@ -839,7 +839,7 @@
                             </div>
                         </div>
 
-                        <div class="team__container-row">
+                        <div class="team__container-row3">
                             <div class="team__card">
                                 <img src="img/about/Imagery-card row 3.png" alt="team">
 
@@ -987,160 +987,177 @@
                     </div>
 
                     <div class="blogs__content-row">
-                        <div class="row__card">
-                            <img src="img/about/Imagery-card blogs.png" alt="blogs" class="row__card-img">
+                        <a href="about.html">
+                            <div class="row__card">
+                                <img src="img/about/Imagery-card blogs.png" alt="blogs" class="row__card-img">
 
-                            <div class="row__card-desc">
-                                <p class="desc-date">
-                                    February 22, 2024 • Ethan Brooks
-                                </p>
-                                <h5 class="desc-title">Daily skincare routine tips</h5>
-                                <p class="desc-sub">
-                                    Expert advice for daily skincare routines to maintain healthy, glowing skin.
-                                </p>
+                                <div class="row__card-desc">
+                                    <p class="desc-date">
+                                        February 22, 2024 • Ethan Brooks
+                                    </p>
+                                    <h5 class="desc-title">Daily skincare routine tips</h5>
+                                    <p class="desc-sub">
+                                        Expert advice for daily skincare routines to maintain healthy, glowing skin.
+                                    </p>
+                                </div>
+
+                                <div class="row__card-button">
+                                    <p class="button_title">Read more</p>
+
+                                    <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                </div>
                             </div>
+                        </a>
+                        <a href="about.html">
+                            <div class="row__card">
+                                <img src="img/about/Imagery-card blogs 2.png" alt="blogs" class="row__card-img">
 
-                            <div class="row__card-button">
-                                <p class="button_title">Read more</p>
+                                <div class="row__card-desc">
+                                    <p class="desc-date">
+                                        March 27, 2024 • Lily Thompson
+                                    </p>
+                                    <h5 class="desc-title">Achieving skin radiance naturally</h5>
+                                    <p class="desc-sub">
+                                        Natural methods to achieve a radiant complexion without harsh chemicals.
+                                    </p>
+                                </div>
 
-                                <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                <div class="row__card-button">
+                                    <p class="button_title">Read more</p>
+
+                                    <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                </div>
                             </div>
-                        </div>
-                        <div class="row__card">
-                            <img src="img/about/Imagery-card blogs 2.png" alt="blogs" class="row__card-img">
+                        </a>
+                        <a href="about.html">
+                            <div class="row__card">
+                                <img src="img/about/Imagery-card blogs 3.png" alt="blogs" class="row__card-img">
 
-                            <div class="row__card-desc">
-                                <p class="desc-date">
-                                    March 27, 2024 • Lily Thompson
-                                </p>
-                                <h5 class="desc-title">Achieving skin radiance naturally</h5>
-                                <p class="desc-sub">
-                                    Natural methods to achieve a radiant complexion without harsh chemicals.
-                                </p>
+                                <div class="row__card-desc">
+                                    <p class="desc-date">
+                                        April 30, 2024 • Oliver Davis
+                                    </p>
+                                    <h5 class="desc-title">Natural ingredients for skincare</h5>
+                                    <p class="desc-sub">
+                                        Explore the benefits of natural ingredients in your skincare products.
+                                    </p>
+                                </div>
+
+                                <div class="row__card-button">
+                                    <p class="button_title">Read more</p>
+
+                                    <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                </div>
                             </div>
+                        </a>
+                        <a href="about.html">
+                            <div class="row__card">
+                                <img src="img/about/Imagery-card blogs 4.png" alt="blogs" class="row__card-img">
 
-                            <div class="row__card-button">
-                                <p class="button_title">Read more</p>
+                                <div class="row__card-desc">
+                                    <p class="desc-date">
+                                        June 5, 2024 • Ava Bennett
+                                    </p>
+                                    <h5 class="desc-title">Essential oils for skincare</h5>
+                                    <p class="desc-sub">
+                                        Explore the use of essential oils in skincare for various benefits.
+                                    </p>
+                                </div>
 
-                                <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                <div class="row__card-button">
+                                    <p class="button_title">Read more</p>
+
+                                    <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                </div>
                             </div>
-                        </div>
-                        <div class="row__card">
-                            <img src="img/about/Imagery-card blogs 3.png" alt="blogs" class="row__card-img">
+                        </a>
+                        <a href="about.html">
+                            <div class="row__card">
+                                <img src="img/about/Imagery-card blogs 5.png" alt="blogs" class="row__card-img">
 
-                            <div class="row__card-desc">
-                                <p class="desc-date">
-                                    April 30, 2024 • Oliver Davis
-                                </p>
-                                <h5 class="desc-title">Natural ingredients for skincare</h5>
-                                <p class="desc-sub">
-                                    Explore the benefits of natural ingredients in your skincare products.
-                                </p>
+                                <div class="row__card-desc">
+                                    <p class="desc-date">
+                                        October 25, 2024 • Sofia Adams
+                                    </p>
+                                    <h5 class="desc-title">Anti-Aging Secrets Revealed</h5>
+                                    <p class="desc-sub">
+                                        Unlock the fountain of youth with proven anti-aging tips and skincare secrets to
+                                        keep your complexion timeless.
+                                    </p>
+                                </div>
+
+                                <div class="row__card-button">
+                                    <p class="button_title">Read more</p>
+
+                                    <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                </div>
                             </div>
+                        </a>
+                        <a href="about.html">
+                            <div class="row__card">
+                                <img src="img/about/Imagery-card blogs 6.png" alt="blogs" class="row__card-img">
 
-                            <div class="row__card-button">
-                                <p class="button_title">Read more</p>
+                                <div class="row__card-desc">
+                                    <p class="desc-date">
+                                        November 30, 2024 • Caleb Johnson
+                                    </p>
+                                    <h5 class="desc-title">The Power of Transparent Skincare</h5>
+                                    <p class="desc-sub">
+                                        Dive into the world of transparent skincare, demystifying ingredients and
+                                        practices
+                                        for a crystal-clear complexion.
+                                    </p>
+                                </div>
 
-                                <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                <div class="row__card-button">
+                                    <p class="button_title">Read more</p>
+
+                                    <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                </div>
                             </div>
-                        </div>
-                        <div class="row__card">
-                            <img src="img/about/Imagery-card blogs 4.png" alt="blogs" class="row__card-img">
+                        </a>
+                        <a href="about.html">
+                            <div class="row__card">
+                                <img src="img/about/Imagery-card blogs 7.png" alt="blogs" class="row__card-img">
 
-                            <div class="row__card-desc">
-                                <p class="desc-date">
-                                    June 5, 2024 • Ava Bennett
-                                </p>
-                                <h5 class="desc-title">Essential oils for skincare</h5>
-                                <p class="desc-sub">
-                                    Explore the use of essential oils in skincare for various benefits.
-                                </p>
+                                <div class="row__card-desc">
+                                    <p class="desc-date">
+                                        January 4, 2025 • Emma White
+                                    </p>
+                                    <h5 class="desc-title">Cold-Weather Skincare Tips</h5>
+                                    <p class="desc-sub">
+                                        Explore the use of essential oils in skincare for various benefits.
+                                    </p>
+                                </div>
+
+                                <div class="row__card-button">
+                                    <p class="button_title">Read more</p>
+
+                                    <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                </div>
                             </div>
+                        </a>
+                        <a href="about.html">
+                            <div class="row__card">
+                                <img src="img/about/Imagery-card blogs 8.png" alt="blogs" class="row__card-img">
 
-                            <div class="row__card-button">
-                                <p class="button_title">Read more</p>
+                                <div class="row__card-desc">
+                                    <p class="desc-date">
+                                        February 8, 2025 • Noah Turner
+                                    </p>
+                                    <h5 class="desc-title">New Year, New Skincare Routine</h5>
+                                    <p class="desc-sub">
+                                        Explore the use of essential oils in skincare for various benefits.
+                                    </p>
+                                </div>
 
-                                <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                <div class="row__card-button">
+                                    <p class="button_title">Read more</p>
+
+                                    <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
+                                </div>
                             </div>
-                        </div>
-                        <div class="row__card">
-                            <img src="img/about/Imagery-card blogs 5.png" alt="blogs" class="row__card-img">
-
-                            <div class="row__card-desc">
-                                <p class="desc-date">
-                                    October 25, 2024 • Sofia Adams
-                                </p>
-                                <h5 class="desc-title">Anti-Aging Secrets Revealed</h5>
-                                <p class="desc-sub">
-                                    Unlock the fountain of youth with proven anti-aging tips and skincare secrets to
-                                    keep your complexion timeless.
-                                </p>
-                            </div>
-
-                            <div class="row__card-button">
-                                <p class="button_title">Read more</p>
-
-                                <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
-                            </div>
-                        </div>
-                        <div class="row__card">
-                            <img src="img/about/Imagery-card blogs 6.png" alt="blogs" class="row__card-img">
-
-                            <div class="row__card-desc">
-                                <p class="desc-date">
-                                    November 30, 2024 • Caleb Johnson
-                                </p>
-                                <h5 class="desc-title">The Power of Transparent Skincare</h5>
-                                <p class="desc-sub">
-                                    Dive into the world of transparent skincare, demystifying ingredients and practices
-                                    for a crystal-clear complexion.
-                                </p>
-                            </div>
-
-                            <div class="row__card-button">
-                                <p class="button_title">Read more</p>
-
-                                <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
-                            </div>
-                        </div>
-                        <div class="row__card">
-                            <img src="img/about/Imagery-card blogs 7.png" alt="blogs" class="row__card-img">
-
-                            <div class="row__card-desc">
-                                <p class="desc-date">
-                                    January 4, 2025 • Emma White
-                                </p>
-                                <h5 class="desc-title">Cold-Weather Skincare Tips</h5>
-                                <p class="desc-sub">
-                                    Explore the use of essential oils in skincare for various benefits.
-                                </p>
-                            </div>
-
-                            <div class="row__card-button">
-                                <p class="button_title">Read more</p>
-
-                                <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
-                            </div>
-                        </div>
-                        <div class="row__card">
-                            <img src="img/about/Imagery-card blogs 8.png" alt="blogs" class="row__card-img">
-
-                            <div class="row__card-desc">
-                                <p class="desc-date">
-                                    February 8, 2025 • Noah Turner
-                                </p>
-                                <h5 class="desc-title">New Year, New Skincare Routine</h5>
-                                <p class="desc-sub">
-                                    Explore the use of essential oils in skincare for various benefits.
-                                </p>
-                            </div>
-
-                            <div class="row__card-button">
-                                <p class="button_title">Read more</p>
-
-                                <img src="img/about/Arrow-right.svg" alt="arrow-right" class="arrow-rightrow">
-                            </div>
-                        </div>
+                        </a>
                     </div>
 
                     <button class="blogs__content-button">
@@ -1246,18 +1263,21 @@
     </footer>
 
     <script>
-        document.querySelectorAll('.team__card .icon').forEach(icon => {
-            const card = icon.closest('.team__card');
+        document.querySelectorAll('.team__card').forEach(card => {
             const desc = card.querySelector('.team__card-desc');
+            const icon = card.querySelector('.icon');
 
-            icon.addEventListener('mouseenter', () => {
-                desc.classList.add('show');
+            card.addEventListener('mouseenter', () => {
+                desc.classList.add('show');       // munculin deskripsi
+                icon.classList.add('hovered');    // ubah icon jadi minus
             });
 
-            icon.addEventListener('mouseleave', () => {
-                desc.classList.remove('show');
+            card.addEventListener('mouseleave', () => {
+                desc.classList.remove('show');    // sembunyikan deskripsi
+                icon.classList.remove('hovered'); // balikin icon jadi plus
             });
         });
+
     </script>
 </body>
 
