AboutPage Mobile Rivisi

--- a/about.html
+++ b/about.html
@@ -131,6 +131,8 @@
                                 sustainable and eco-conscious world.</p>
                         </div>
 
+                        <div class="sparation_misivisi"></div>
+
                         <div class="vision">
                             <img src="img/about/Icon-visi.svg" alt="icon-vision" class="vision-icon">
 
