Pixel Perfect Test Desktop

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <div class="product-card">
         <div class="product-card__image">
           <a href="#">
-            <img src="img/Product Image.png" alt="Velvety Chicori" />
+            <img src="img/Product-Image.png" alt="Velvety Chicori" />
           </a>
         </div>
         <div class="product-card__desc">
@@ -198,7 +198,7 @@
       <div class="product-card-2">
         <div class="product-card__image">
           <a href="#">
-            <img src="img/Product Image 2.png" alt="Velvety Notorious" />
+            <img src="img/Product Image 2.png" alt="Velvety Notorious" class="img-2"/>
           </a>
         </div>
         <div class="product-card__desc">
@@ -220,7 +220,7 @@
       </div>
 
       <!-- Product 3 -->
-      <div class="product-card">
+      <div class="product-card padding-b">
         <div class="product-card__image">
           <a href="#">
             <img src="img/Product Image 3.png" alt="Velvety Holocena" />
