Fix Score PageSpeed

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <!-- HERO CONTENT -->
         <div class="hero__content">
-          <img src="img/product-hero.png" alt="Product Bottle" class="hero__product" />
+          <img src="img/product-hero.webp" alt="Product Bottle" class="hero__product" />
 
           <h1 class="hero__headline">
             Let nature take <br />
@@ -118,7 +118,7 @@
     <div class="container">
       <div class="ingredients-wrapper">
         <div class="ingredients__left">
-          <img src="img/powder.png" alt="Green powder in bowl" class="ingredients__image" />
+          <img src="img/powder.webp" alt="Green powder in bowl" class="ingredients__image" />
           <h2 class="ingredients__headline">
             Inspired by traditional<br>knowledge and nature
           </h2>
